--- a/client.html
+++ b/client.html
@@ -340,7 +340,12 @@
                           <p class="bold-heading-3 neutral-700--text m-0">
                             Urutkan & Filter
                           </p>
-                          <button class="btn bg-primary-600 btn-dark bold-body">
+                          <button
+                            type="button"
+                            role="button"
+                            class="btn bg-primary-600 btn-dark bold-body"
+                            onclick="handleSubmitFilter()"
+                          >
                             Terapkan
                           </button>
                         </div>
@@ -537,7 +542,7 @@
                                             />
                                             <label
                                               class="custom-control-label"
-                                              for="babyProducs"
+                                              for="babyProducts"
                                               >Baby Products</label
                                             >
                                           </div>
@@ -545,7 +550,7 @@
                                       </div>
                                     </div>
                                     <!-- Banking - Collapse -->
-                                    <div>
+                                    <!-- <div>
                                       <div id="innerHeadingTwo">
                                         <h2 class="mb-0">
                                           <button
@@ -623,10 +628,10 @@
                                           </div>
                                         </div>
                                       </div>
-                                    </div>
+                                    </div> -->
 
                                     <!-- Agency - Collapse -->
-                                    <div>
+                                    <!-- <div>
                                       <div id="innerHeadingThree">
                                         <h2 class="mb-0">
                                           <button
@@ -704,10 +709,10 @@
                                           </div>
                                         </div>
                                       </div>
-                                    </div>
+                                    </div> -->
 
                                     <!-- Education - Collapse -->
-                                    <div>
+                                    <!-- <div>
                                       <div id="innerHeadingFour">
                                         <h2 class="mb-0">
                                           <button
@@ -785,7 +790,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                    </div>
+                                    </div> -->
                                   </div>
                                 </div>
                               </div>
@@ -804,6 +809,10 @@
                     Export CSV
                   </button>
                 </div>
+              </div>
+              <!-- Filter Chips -->
+              <div id="filterChips" class="d-none">
+                <div id="listChips" class="d-flex my-2 flex-wrap"></div>
               </div>
               <div class="card-body p-0">
                 <div class="table-responsive">
@@ -999,7 +1008,6 @@
         </div>
       </div>
     </div>
-
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -1011,6 +1019,46 @@
 
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <script>
+      // $(document).ready(() => {
+      //   $('input:checkbox').change((e) => {
+      //     const id = e.target.id
+      //     const text = $(`label[for='${id}']`)[0].innerHTML
+      //     console.log(text)
+      //   })
+      // })
+
+      const handleSubmitFilter = () => {
+        const tempArray = []
+        $(':checkbox:checked').each(function (i) {
+          const id = $(this).attr('id')
+          const text = $(`label[for='${id}']`)[0].innerHTML
+          tempArray[i] = text
+        })
+        console.log(tempArray)
+
+        /* Close dropdown */
+        $('#filterDropdown').dropdown('toggle')
+
+        if (tempArray.length > 0) {
+          $('#filterChips').removeClass('d-none')
+
+          $('#listChips').empty()
+
+          tempArray.forEach((item) => {
+            const element = `<div
+                    class="rounded-pill medium-body bg-primary-100 primary-600--text py-2 px-3 inline-block mr-2 mb-2"
+                  >
+                    ${item}
+                  </div>`
+            $('#listChips').append(element)
+          })
+        } else {
+          $('#filterChips').addClass('d-none')
+        }
+      }
+    </script>
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
